- swagger documentation (new endpoints) - validation fix
