# swagger.json
@@ -18,6 +18,9 @@
   "servers": [
     {
       "url": "http://localhost:3001"
+    },
+    {
+      "url": "https://kapusta-organizer.herokuapp.com/"
     }
   ],
   "tags": [
@@ -313,7 +316,79 @@
           }
         }
       }
-    }
+    },
+    "/api/reports/balance/": {
+      "get": {
+        "tags": ["Reports"],
+        "summary": "Get balance by parts",
+        "parameters": [],
+        "security": [{"Bearer": [] } ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReportsBalanceResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/api/reports/cash-out/": {
+      "get": {
+        "tags": ["Reports"],
+        "summary": "Get expense report for month",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "year",
+            "schema": {
+              "type": "string",
+              "example": "2020"
+            },
+            "required": true,
+            "description": "year"
+          },
+          {
+            "in": "path",
+            "name": "month",
+            "schema": {
+              "type": "string",
+              "example": "09"
+            },
+            "required": true,
+            "description": "month"
+          }
+        ],
+        "security": [{"Bearer": [] } ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CashOutResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/api/reports/cash-out/last-six-month/": {},
+    "/api/reports/cash-in/": {},
+    "/api/reports/cash-in/last-six-month/": {}
   },
     "components": {
       "schemas": {
@@ -550,6 +625,99 @@
               "type": "string",
               "description": "transaction day",
               "example": "7"
+            }
+          }
+        },
+        "ReportsBalanceResponse": {
+          "type": "object",
+          "properties": {
+              "data": {
+                "type": "object",
+                "properties": {
+                  "cashOutBalance": {
+                    "type": "integer",
+                    "description": "expense values",
+                    "example": 1000
+                  },
+                  "cashInBalance": {
+                    "type": "integer",
+                    "description": "cash in values",
+                    "example": 1000
+                  },
+                  "balance": {
+                    "type": "integer",
+                    "description": "full balance",
+                    "example": 2000
+                  }
+                }
+              }
+          }
+        },
+        "CashOutResponse": {
+          "type": "object",
+          "properties": {
+            "data": {
+              "type": "object",
+              "properties": {
+                "transactionListMonth": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "description": "transaction id",
+                        "example": "14124123kjlkh123141234123"
+                      }
+                    }
+                  }
+                },
+                "cashOutMonth": {
+                  "type": "integer",
+                  "description": "expenses in month",
+                  "example": 1000
+                },
+                "cashInMonth": {
+                  "type": "integer",
+                  "description": "cash in month",
+                  "example": 1000
+                },
+                "details": {
+                  "type": "object",
+                  "properties": {
+                    "categoriesAndDescription": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "description": "id"
+                          },
+                          "totalByCategory": {
+                            "type": "integer",
+                            "description": "total value in category",
+                            "example": 10000
+                          },
+                          "desc": {
+                            "type": "array",
+                            "items": {
+                              "type": "object",
+                              "properties": {
+                                "desc": {
+                                  "type": "string",
+                                  "description": "description",
+                                  "example": "food"
+                                }
+                              }
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
             }
           }
         }
